# MobileAppQML

./: CMakeLists.txt  Main.qml  README.md  iamge.qrc  main.cpp
